next.jsでexportに指定、openapiの修正、bootstrapの修正
